--- a/src/css/test.css
+++ b/src/css/test.css
@@ -4,6 +4,7 @@ body {
     z-index: 1;
     min-height: 100%;
     display: block;
+    font-size: 9px;
 }
 
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, p, blockquote, th, td, iframe {
@@ -20,10 +21,11 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, 
 .northcoders-image {
     display: inline-block;
     position: relative;
-    height: 30px;
+    height: 20px;
+    width: 60px;
     margin: 5px;
     vertical-align: bottom;
-    padding-bottom: 5px;
+    padding-bottom: 7px;
 }
 
 .news-text {
@@ -31,7 +33,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, 
   font-size: 1em;
   position: absolute;
   bottom: 0;
-  margin-left: 5px;
+  margin-left: 4px;
 }
 
 .tabmenu {
@@ -53,8 +55,166 @@ a {
     color: #369;
 }
 
-.spacer .link {
+.link {
     margin: 0;
-    margin-bottom: 8px;
+    margin-bottom: 12px;
     padding-left: 3px;
+}
+.link .rank {
+    float: left;
+    margin-top: 15px;
+    color: #c6c6c6;
+    font-family: arial;
+    font-size: medium;
+    text-align: right;
+}
+
+.rank {
+    overflow: hidden;
+}
+.arrow {
+    margin: 2px 0px 0px 0px;
+    width: 100%;
+    height: 14px;
+    display: block;
+    cursor: pointer;
+    width: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    outline: none;
+    color: #c6c6c6;
+}
+
+.link .midcol {
+    font-weight: bold;
+    font-size: small;
+}
+
+.midcol {
+    float: left;
+    margin-right: 7px;
+    margin-left: 7px;
+    background: transparent;
+    overflow: hidden;
+}
+.link .score {
+    text-align: center;
+    color: #c6c6c6;
+}
+
+.entry {
+    overflow: hidden;
+    margin-left: 3px;
+    opacity: 1;
+}
+
+.link .title {
+    font-size: medium;
+    font-weight: normal;
+    margin-bottom: 1px;
+}
+
+.thing .title {
+    color: #0000ff;
+}
+
+
+.thing .title {
+    outline: none;
+    margin-right: .4em;
+    padding: 0px;
+    overflow: hidden;
+    unicode-bidi: isolate;
+}
+
+.tagline {
+    color: #888;
+    font-size: x-small;
+}
+
+.link .flat-list {
+    display: block;
+    padding: 1px 0;
+}
+
+.flat-list {
+    list-style-type: none;
+    display: inline;
+}
+.entry .buttons li {
+    display: inline-block;
+    border: none;
+    padding-right: 4px;
+    line-height: 1.6em;
+}
+.flat-list li, .flat-list form {
+    display: inline;
+    white-space: nowrap;
+}
+
+.entry .buttons li+li {
+    padding-left: 4px;
+}
+
+.clearleft {
+    clear: left;
+    height: 0px;
+}
+.content {
+    z-index: 1;
+    margin: 7px 5px 0px 5px;
+}
+
+.sitetable {
+    list-style-type: none;
+}
+
+#sr-header-area {
+    background-color: #f0f0f0;
+    white-space: nowrap;
+    text-transform: uppercase;
+    border-bottom: 1px solid gray;
+    font-size: 90%;
+    height: 18px;
+    line-height: 18px;
+}
+#sr-header-area .width-clip {
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.mySubreddits {
+    float: left;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+#sr-header-area .sr-list {
+    overflow: hidden;
+}
+
+.separator {
+    color: gray;
+    margin: 0px .7ex 0px .7ex;
+    cursor: default;
+}
+
+.flat-list li, .flat-list form {
+    display: inline;
+    white-space: nowrap;
+    padding: 3px;
+}
+.selected, .choice.primary {
+    font-weight: bold;
+}
+
+.header-bottom-right {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    background-color: #EFF7FF;
+    padding: 4px;
+    line-height: 12px;
+    border-top-left-radius: 7px;
 }
