--- a/src/css/test.css
+++ b/src/css/test.css
@@ -59,6 +59,7 @@ a {
     margin: 0;
     margin-bottom: 12px;
     padding-left: 3px;
+    margin-top: 12px; 
 }
 .link .rank {
     float: left;
@@ -68,6 +69,27 @@ a {
     font-size: medium;
     text-align: right;
 }
+.article-body {
+    width: 90%;
+    font-size: 1.4em;
+    margin-top: 5px;
+    line-height: 20px;
+}
+.article-overall {
+    margin: 10px 20px 10px 10px;
+    border: 1px solid #f2f2f2;
+    background: #fafafa;
+    padding: 4px 2px;
+    width: 87%;
+}
+.comment-overall {
+    margin: 0px 20px 10px 5px;
+    border: 1px solid #f2f2f2;
+    background: #fafafa;
+    padding: 4px 2px;
+    line-height: 15px;
+}
+
 
 .rank {
     overflow: hidden;
@@ -109,7 +131,7 @@ a {
 }
 
 .link .title {
-    font-size: medium;
+    font-size: 1.4em;
     font-weight: normal;
     margin-bottom: 1px;
 }
@@ -129,7 +151,7 @@ a {
 
 .tagline {
     color: #888;
-    font-size: x-small;
+    font-size: .9em;
 }
 
 .link .flat-list {
@@ -173,6 +195,7 @@ a {
 .content {
     z-index: 1;
     margin: 7px 5px 0px 5px;
+    width: 90%;
 }
 
 .sitetable {
@@ -229,3 +252,18 @@ a {
     border-top-left-radius: 7px;
 }
 
+.comments-are-here-text {
+    margin-left: 1.2em;
+}
+
+
+.delete-button {
+
+}
+
+.article-mainpage {
+    margin: 10px 20px 10px 5px;
+    border: 1px solid #f2f2f2;
+    background: #fafafa;
+    padding: 4px 2px;
+}
