--- a/src/css/test.css
+++ b/src/css/test.css
@@ -88,8 +88,13 @@ a {
     background: #fafafa;
     padding: 4px 2px;
     line-height: 15px;
+    position: relative;
 }
-
+.comment-tagline {
+    color: #888;
+    font-size: .9em;
+    margin: 10px;
+}
 
 .rank {
     overflow: hidden;
@@ -257,13 +262,49 @@ a {
 }
 
 
-.delete-button {
-
-}
 
 .article-mainpage {
     margin: 10px 20px 10px 5px;
     border: 1px solid #f2f2f2;
     background: #fafafa;
     padding: 4px 2px;
+}
+
+.commentBox {
+    height: 10em;
+    margin: 10px;
+    padding: 2px;
+    margin-bottom: 50px;
+}
+
+.text-area {
+    height: 100%;
+    width: 98%;
+    margin: 0 auto;
+    background-color: #fafafa;
+    border: 1px solid #f2f2f2;
+}
+
+.commentForm {
+    height: 100%;
+    width: 100%;
+}
+
+.addCommentButton {
+    float: right;
+    width: 10%;
+    height: 3em;
+    background-color: #fafafa;
+    font: normal x-small verdana,arial,helvetica,sans-serif;
+    margin-right: 0.7em;
+    border: 1px solid #f2f2f2;
+
+}
+
+.delete-button {
+    display: inline;
+    margin-left: 1em;
+    right: 0px;
+    bottom: 2px;
+    position: absolute;
 }
